--- a/src/client/drones.html
+++ b/src/client/drones.html
@@ -1,11 +1,11 @@
-<template name='drones'>
-<div class='row'>
-	<div class='col-md-8'>
-		DRONES VIEW
-</div>	
-<div class='col-md-4'>
-	COL RIGHT
-</div> 
-</div>
+<template name="drones">
+  <div class="row">
+    <div class="col-md-8">
+      DRONES VIEW
+    </div>  
+    <div class="col-md-4">
+      COL RIGHT
+    </div>
+  </div>
 </template>
      
