--- a/src/client/layout.html
+++ b/src/client/layout.html
@@ -10,17 +10,14 @@
   <meta name="MobileOptimized" content="400">
 	<!--<meta name="viewport" content="width=device-width, initial-scale=0.8, maximum-scale=0.8, user-scalable=no">-->
   <link rel="icon" sizes="16x16 32x32" href="/favicon.ico">
-
 </head>
 <body>
 </body>
 
-
-<template name='layout'>
+<template name="layout">
 	<noscript>
-	Sorry! We require javascript.
+	 Sorry! We require javascript.
   </noscript>
-
   <div class="navbar navbar-default navbar-static-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
@@ -40,8 +37,7 @@
         </div>
       </div>
   </div>
-	<div class='container'>
+	<div class="container">
 		{{> yield}}
 	</div>
-
 </template>
