Change name incidence -> incidents

--- a/src/client/incidents.html
+++ b/src/client/incidents.html
@@ -1,7 +1,7 @@
-<template name="incidences">
+<template name="incidents">
   <div class="row">
     <div class="col-md-4">
-      INCIDENCES
+      Incidents
   </div>
   <div class="col-md-8">
     COL RIGHT
