--- a/src/client/drones.html
+++ b/src/client/drones.html
@@ -1,10 +1,10 @@
 <template name="drones">
   <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-3">
       DRONES VIEW
     </div>  
-    <div class="col-md-4">
-      COL RIGHT
+    <div class="col-md-8">
+      <div id="map"></div>
     </div>
   </div>
 </template>
