--- a/src/client/layout.html
+++ b/src/client/layout.html
@@ -1,5 +1,5 @@
 <head>
-<title>ANIGO - Solar Panel monitoring solution</title>
+  <title>ANIGO - Solar Panel monitoring solution</title>
   <meta name="description" content="ANIGO">
   <meta name="language" content="english">
   <meta http-equiv="content-language" content="en">
@@ -16,7 +16,7 @@
 
 <template name="layout">
   <noscript>
-   Sorry! We require javascript.
+    Sorry! We require javascript.
   </noscript>
   <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container-fluid">
@@ -32,12 +32,12 @@
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="/incidences">Incidents</a></li>
+          <li><a href="/incidents">Incidents</a></li>
           <li><a href="/drones">Drones</a></li>
         </ul>
         <div class="navbar-right">
           <p class="navbar-text">
-            signed in as John
+            Signed in as John
           </p>
         </div>
       </div>
