Map view created

--- a/src/client/incidents.html
+++ b/src/client/incidents.html
@@ -1,12 +1,10 @@
 <template name="incidents">
   <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-2">
       Incidents
   </div>
-  <div class="col-md-8">
-    COL RIGHT
-    HERE MAP
+  <div class="col-md-10">
+    <div id="map" style="min-width: 100%; min-height: 700px; position: absolute;">{{changeMap}}</div>
   </div>
   </div>
 </template>
-
