--- a/src/client/layout.html
+++ b/src/client/layout.html
@@ -8,6 +8,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="HandheldFriendly" content="true">
   <meta name="MobileOptimized" content="400">
+  <meta http-equiv="X-UA-Compatible" content="IE=7; IE=EmulateIE9; IE=10" />
+  <script src="http://js.api.here.com/se/2.5.4/jsl.js" type="text/javascript" charset="utf-8"></script>
+  <script type="text/javascript">
+    nokia.Settings.set("app_id", "Njo9Tqk4DJ3QpzJV1sMB");
+    nokia.Settings.set("app_code", "gRM2Gcs1NEMfGWq66Lzs0w");
+    nokia.Settings.set("serviceMode", "cit");
+  </script>
+  <style type="text/css">
+    html {
+      overflow:hidden;
+    }
+  </style>
   <!--<meta name="viewport" content="width=device-width, initial-scale=0.8, maximum-scale=0.8, user-scalable=no">-->
   <link rel="icon" sizes="16x16 32x32" href="/favicon.ico">
 </head>
