Add fonts/. Resolve merge.

--- a/src/client/incidents.html
+++ b/src/client/incidents.html
@@ -1,10 +1,17 @@
 <template name="incidents">
+  <h2>Incidents</h2>
   <div class="row">
-    <div class="col-md-2">
-      Incidents
+    <div class="col-md-4">
+      <ul class="nav nav-pills">
+        <li class="active"><a href="#">Home</a></li>
+        <li><a href="#">Profile</a></li>
+        <li><a href="#">Messages</a></li>
+      </ul>
   </div>
-  <div class="col-md-10">
-    <div id="map" style="min-width: 100%; min-height: 700px; position: absolute;">{{changeMap}}</div>
+  <div class="col-md-8">
+    <div id="map" style="min-width: 100%; min-height: 700px; position: absolute;">
+      {{changeMap}}
+    </div>
   </div>
   </div>
 </template>
