Global helper for active link on navbar

--- a/src/client/layout.html
+++ b/src/client/layout.html
@@ -44,8 +44,8 @@
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-          <li><a href="/incidents">Incidents</a></li>
-          <li><a href="/drones">Drones</a></li>
+          <li class='{{isActive 'incidents'}}'><a href="/incidents">Incidents</a></li>
+          <li class='{{isActive 'drones'}}'><a href="/drones">Drones</a></li>
         </ul>
         <div class="navbar-right">
           <p class="navbar-text">
