Geoposition through browser

--- a/src/client/layout.html
+++ b/src/client/layout.html
@@ -21,7 +21,7 @@
     }
   </style>
   <!--<meta name="viewport" content="width=device-width, initial-scale=0.8, maximum-scale=0.8, user-scalable=no">-->
-  <link rel="icon" sizes="16x16 32x32" href="/favicon.ico">
+  <link rel="icon" href="http://developer.here.com/apiexplorer/examples/templates/common/favicon.ico" type="image/x-icon" />
 </head>
 <body>
 </body>
