--- a/src/client/layout.html
+++ b/src/client/layout.html
@@ -45,7 +45,7 @@
           <li><a href="#">Resources</a></li>
           <li class="dropdown">
             <a href="#" id="drop3" role="button" class="dropdown-toggle" data-toggle="dropdown">
-              <img src="img/" alt="" class="img-circle">
+              <img src="images/avatar.gif" alt="" class="img-rounded avatar">
               <b class="caret"></b></a>
             <ul class="dropdown-menu" role="menu" aria-labelledby="drop3">
               <li role="presentation">
