--- a/src/client/incidents.html
+++ b/src/client/incidents.html
@@ -29,7 +29,25 @@
         </div>
       </form>
     </div>
-    <div class="col-md-8 incident-detail">
+    <div class= "col-md-8 incident-detail">
+      <div class="row">
+        <div class="col-md-8">
+          <h3>Incident Title</h3>
+        </div>
+        <div class="col-md-4">
+          <div class="btn-group pull-right" data-toggle="buttons">
+            <label class="btn btn-default">
+              <input type="radio" name="options" id="option1"> In Progress
+            </label>
+            <label class="btn btn-default">
+              <input type="radio" name="options" id="option2"> Suspended
+            </label>
+            <label class="btn btn-default">
+              <input type="radio" name="options" id="option3">Resolved
+            </label>
+          </div>
+        </div>
+      </div>
       <div id="map" class="map map-incident">
         {{changeMap}}
       </div>
