--- a/src/client/incidents.html
+++ b/src/client/incidents.html
@@ -1,5 +1,6 @@
 <template name="incidents">
   <h2>Incidents</h2>
+  <button class="createIncident btn btn-danger">Simulate incidents</button>
   <div class="row">
     <div class="col-md-4 incident-list">
       <form class="form-inline" role="form">
@@ -28,13 +29,18 @@
           </select>
         </div>
       </form>
+      {{#each incident}}
+        <div class="alert alert-danger">
+          <p>{{this.status}}</p>
+        </div>
+      {{/each}}
     </div>
     <div class= "col-md-8 incident-detail">
       <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-6">
           <h3>Incident Title</h3>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-6">
           <div class="btn-group pull-right" data-toggle="buttons">
             <label class="btn btn-default">
               <input type="radio" name="options" id="option1"> In Progress
