--- a/src/client/incidents.html
+++ b/src/client/incidents.html
@@ -59,4 +59,10 @@
       </div>
     </div>
   </div>
+  <br>
+  <div class="row">
+    <div class="col-md-12">
+      <div id="dataCharts"></div>
+    </div>
+  </div>
 </template>
