Live data on main page

--- a/src/client/incidents.html
+++ b/src/client/incidents.html
@@ -95,17 +95,11 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-6">
           <div id="dataCharts" class=""></div>
         </div>
-        <div class="col-md-3 ">
-          <img class="center-block" src="http://lorempixel.com/150/300/abstract" alt="">
-        </div>
-        <div class="col-md-3 ">
-          <img class="center-block" src="http://lorempixel.com/150/300/abstract" alt="">
-        </div>
-        <div class="col-md-3 ">
-          <img class="center-block" src="http://lorempixel.com/150/300/abstract" alt="">
+        <div class="col-md-6">
+          <div id="chartLive" class=""></div>
         </div>
       </div>
       <hr>
