Change name to Arndt

--- a/src/client/layout.html
+++ b/src/client/layout.html
@@ -1,5 +1,5 @@
 <head>
-  <title>ANIGO - Solar Panel monitoring solution</title>
+  <title>Arndt - Solar Panel monitoring solution</title>
   <meta name="description" content="ANIGO">
   <meta name="language" content="english">
   <meta http-equiv="content-language" content="en">
