Forgot some strings...

--- a/src/client/home.html
+++ b/src/client/home.html
@@ -3,8 +3,9 @@
     <div class="col-md-12">
       <div class="megatron">
         <h1 class="megatron-title animated fadeInDown">
-          Awesome Title
+          Arndt
         </h1>
+        <h2>Drone Assisted Industrial Maintenance</h2>
       </div>
     </div>
   </div>
