--- a/src/client/layout.html
+++ b/src/client/layout.html
@@ -1,6 +1,6 @@
 <head>
   <title>Arndt - Solar Panel monitoring solution</title>
-  <meta name="description" content="ANIGO">
+  <meta name="description" content="Arndt">
   <meta name="language" content="english">
   <meta http-equiv="content-language" content="en">
   <meta charset="utf-8" />
@@ -28,7 +28,7 @@
   <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="/">ANIGO</a>
+        <a class="navbar-brand" href="/">Arndt</a>
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
