Add inspection and market pages

--- a/src/client/layout.html
+++ b/src/client/layout.html
@@ -34,6 +34,8 @@
         <ul class="nav navbar-nav">
           <li class='{{isActive 'incidents'}}'><a href="/incidents">Incidents</a></li>
           <li class='{{isActive 'drones'}}'><a href="/drones">Drones</a></li>
+          <li class='{{isActive 'onsight'}}'><a href="/inspection">Inspection</a></li>
+          <li class='{{isActive 'market'}}'><a href="/market">Market Size</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#">About</a></li>
