--- a/src/client/market.html
+++ b/src/client/market.html
@@ -1,7 +1,7 @@
-<template name="drones">
+<template name="market">
   <div class="row">
     <div class="col-md-12">
-      DRONES VIEW
+      MARKET VIEW
     </div>
   </div>
 </template>
