--- a/src/client/inspection.html
+++ b/src/client/inspection.html
@@ -1,7 +1,7 @@
-<template name="drones">
+<template name="inspection">
   <div class="row">
     <div class="col-md-12">
-      DRONES VIEW
+      INSPECTION VIEW
     </div>
   </div>
 </template>
