Incidents modifies. $> reset meteor

--- a/src/client/drones.html
+++ b/src/client/drones.html
@@ -1,10 +1,8 @@
 <template name="drones">
   <div class="row">
-    <div class="col-md-3">
-      DRONES VIEW
-    </div>  
-    <div class="col-md-8">
-      <div id="map"></div>
+    <div class="col-md-12 text-center">
+      <br><br>
+      <iframe width="640" height="360" src="//www.youtube.com/embed/FAJ7-ynu9NQ" frameborder="0" allowfullscreen></iframe>
     </div>
   </div>
 </template>
