--- a/src/client/incidents.html
+++ b/src/client/incidents.html
@@ -49,7 +49,7 @@
           {{#each incident}}
             <tr class="choosenBuilding" id="{{this.building}}">
               <td>{{this.position}}</td>
-              <td>Issue on Item at {{loadInfoBuilding this.building}}</td>
+              <td>{{this.issue}} on {{this.item}} at {{loadInfoBuilding this.building}}</td>
               <td>
                 <span class="glyphicon glyphicon-warning-sign {{priorityColour this.priority}}"></span>
               </td>
@@ -63,7 +63,9 @@
     <div class= "col-md-8 incident-detail">
       <div class="row">
         <div class="col-md-6">
-          <h3># - Issue on Item at Housename</h3>
+          {{#if infoIncident}}
+            <h3>#{{infoIncident.position}} {{infoIncident.issue}} on {{infoIncident.item}}</h3>
+          {{/if}}
         </div>
         <div class="col-md-6">
           <div class="btn-group pull-right" data-toggle="buttons">
