--- a/src/client/incidents.html
+++ b/src/client/incidents.html
@@ -105,11 +105,14 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-4">
           <div id="dataCharts" class=""></div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-4">
           <div id="chartLive" class=""></div>
+        </div>
+        <div class="col-md-4">
+          <div id="mapEurope"></div>
         </div>
       </div>
       <hr>
