--- a/src/client/incidents.html
+++ b/src/client/incidents.html
@@ -35,7 +35,7 @@
           </div>
         </form>
       </div>
-      <table class="table table-striped">
+      <table class="table table-striped table-hover table-condensed">
         <thead>
           <tr>
             <th>#</th>
@@ -47,7 +47,7 @@
         </thead>
         <tbody>
           {{#each incident}}
-            <tr class="choosenBuilding" id="{{this.building}}">
+            <tr class="choosenBuilding " id="{{this.building}}">
               <td>{{this.position}}</td>
               <td>{{this.issue}} on {{this.item}} at {{loadInfoBuilding this.building}}</td>
               <td>
