--- a/src/client/inspection.html
+++ b/src/client/inspection.html
@@ -1,7 +1,8 @@
 <template name="inspection">
   <div class="row">
-    <div class="col-md-12">
-      INSPECTION VIEW
+    <div class="col-md-12 text-center">
+      <br><br>
+      <iframe width="640" height="480" src="//www.youtube.com/embed/zGp6yS1nCWI" frameborder="0" allowfullscreen></iframe>
     </div>
   </div>
 </template>
